refactor buyer api, add product extension
