# app.js
@@ -83,7 +83,7 @@ app.use(function(req, res, next){
 
 var authRouter = require('./routes/auth');
 
-var pricesApiRouter = require('./routes/api/price-api');
+var buyerOrgApi = require('./routes/api/buyer-org-api');
 var productsApiRouter = require('./routes/api/products-api');
 var familiesApiRouter = require('./routes/api/families-api');
 var equipmentApiRouter = require('./routes/api/equipment-api');
@@ -98,13 +98,13 @@ app.use('/auth', authRouter);
 const authenticated = require('./routes/middleware/authenticated');
 
 app.use('/api/v1/products', productsApiRouter);
-app.use('/api/v1/prices', pricesApiRouter);
 app.use('/api/v1/families', familiesApiRouter);
 app.use('/api/v1/equipment', equipmentApiRouter);
 app.use('/api/v1/groups', groupsApiRouter);
 app.use('/api/v1/customer-identity', customerIdentityRouter);
 app.use('/api/v1', apiRouter);
 app.use('/api/v1/dataload', authenticated(), dataloadApiRouter);
+app.use('/api/v1/buyer/org', buyerOrgApi);
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
